qcacld-3.0: Add Kbuild options for DCS
1) Add optional code compilation for Dynamic ACS(DCS) module.
2) Add Kbuild option(CONFIG_DCS) to control whether DCS code
   should be compiled.

Change-Id: Ia594db21fef43a8ef6e90afb4191f50ba42f74b7
CRs-Fixed: 2604529

--- a/drivers/staging/qcacld-3.0/configs/qca6390_defconfig
+++ b/drivers/staging/qcacld-3.0/configs/qca6390_defconfig
@@ -620,6 +620,9 @@ endif
 
 CONFIG_CP_STATS := y
 
+#Flag to enable compilation of DCS module
+CONFIG_DCS := y
+
 CONFIG_FEATURE_WLAN_WAPI := y
 
 CONFIG_AGEIE_ON_SCAN_RESULTS := y
