qcacld-3.0: Provide soc objmgr to hif
Pass soc objmgr from hdd context to hif context
to retrieve INI parameters to be used in hif
layer.

Change-Id: I0ad4573fecba0fc78968145394683057d09da312
CRs-Fixed: 2598759

--- a/drivers/staging/qcacld-3.0/configs/default_defconfig
+++ b/drivers/staging/qcacld-3.0/configs/default_defconfig
@@ -913,6 +913,7 @@ ifeq ($(CONFIG_LITHIUM), y)
 	endif
 	CONFIG_WLAN_SUPPORT_DATA_STALL := y
 	CONFIG_WLAN_DP_PER_RING_TYPE_CONFIG := y
+	CONFIG_WLAN_CE_INTERRUPT_THRESHOLD_CONFIG := y
 	#Enable WMI TX/RX over QMI
 	CONFIG_WMI_SEND_RECV_QMI := y
 	CONFIG_WLAN_DP_PENDING_MEM_FLUSH := y
