makefile:enable display techpack only for QGKI variant
This change enables the display compilation only for qgki
variant until all the dependencies are resolved.

Change-Id: I55577367921df7c7f10e68ef4dad28feea826748
Signed-off-by: Abhijit Kulkarni <kabhijit@codeaurora.org>

--- a/techpack/display/config/lahainadisp.conf
+++ b/techpack/display/config/lahainadisp.conf
@@ -1,3 +1,4 @@
+ifeq ($(CONFIG_QGKI),y)
 export CONFIG_DRM_MSM=y
 export CONFIG_DRM_MSM_SDE=y
 export CONFIG_SYNC_FILE=y
@@ -6,3 +7,4 @@ export CONFIG_DSI_PARSER=y
 export CONFIG_DRM_SDE_WB=y
 export CONFIG_DRM_MSM_REGISTER_LOGGING=y
 export CONFIG_QCOM_MDSS_PLL=y
+endif
