--- a/drivers/staging/qcacld-3.0/configs/default_defconfig
+++ b/drivers/staging/qcacld-3.0/configs/default_defconfig
@@ -427,6 +427,7 @@ CONFIG_DP_TXRX_SOC_ATTACH := y
 CONFIG_WLAN_CLD_PM_QOS := y
 CONFIG_DISABLE_DP_STATS := n
 CONFIG_REO_DESC_DEFER_FREE := y
+CONFIG_RXDMA_ERR_PKT_DROP := y
 
 ifeq ($(CONFIG_FEATURE_TSO), y)
 	CONFIG_FEATURE_TSO_STATS := y
