qcacld-3.0: Enable FTM time sync feature
Add the config to enable FTM time sync feature.

Change-Id: Ia157ad6277c8755bb80d6b81d41c2e1f74d09662
CRs-Fixed: 2615281

--- a/drivers/staging/qcacld-3.0/configs/default_defconfig
+++ b/drivers/staging/qcacld-3.0/configs/default_defconfig
@@ -1014,3 +1014,7 @@ CONFIG_SAP_DHCP_FW_IND := y
 
 #Enable support to get ANI level
 CONFIG_ANI_LEVEL_REQUEST := y
+
+ifeq ($(CONFIG_ARCH_QCS405), y)
+CONFIG_FEATURE_WLAN_TIME_SYNC_FTM := y
+endif
