qcacld-3.0: Disable PM_QOS feature in WHUNT config
Disable CLD_PM_QOS feature as it is not supported in WHUNT kernel

Change-Id: Ie365739559a78377083f6eebaad2f1a7384437d6
CRs-Fixed: 2611911

--- a/drivers/staging/qcacld-3.0/configs/whunt_defconfig
+++ b/drivers/staging/qcacld-3.0/configs/whunt_defconfig
@@ -8,3 +8,6 @@ include $(WLAN_ROOT)/configs/default_defconfig
 
 #Enable BUS bandwidth Feature
 CONFIG_WLAN_FEATURE_DP_BUS_BANDWIDTH := y
+
+#Disable PM_QOS not supported in WHUNT
+CONFIG_WLAN_CLD_PM_QOS := n
