--- a/drivers/staging/qcacld-3.0/configs/default_defconfig
+++ b/drivers/staging/qcacld-3.0/configs/default_defconfig
@@ -216,6 +216,9 @@ CONFIG_WLAN_FEATURE_ACTION_OUI := y
 #Flag to enable Adaptive 11r feature
 CONFIG_ADAPTIVE_11R := y
 
+#Flag to enable sae single pmk feature
+CONFIG_SAE_SINGLE_PMK := y
+
 #Flag to enable FILS Feature (11ai)
 CONFIG_WLAN_FEATURE_FILS := y
 ifneq ($(CONFIG_QCA_CLD_WLAN),)
