qcacld-3.0: enable SMMU S1 and METERING Features in IPA
Enable SMMU_S1 and METERING Features in IPA for all the
Helium based Adrastea targets, by default.

Change-Id: I2cefe6f137415f22f2005a1c6f2d29d23fe08fea
CRs-Fixed: 2624096

--- a/drivers/staging/qcacld-3.0/configs/default_defconfig
+++ b/drivers/staging/qcacld-3.0/configs/default_defconfig
@@ -188,14 +188,6 @@ ifeq ($(CONFIG_ARCH_MSM8998), y)
 CONFIG_QCACLD_FEATURE_METERING := y
 endif
 
-ifeq ($(CONFIG_ARCH_SDM660), y)
-CONFIG_QCACLD_FEATURE_METERING := y
-endif
-
-ifeq ($(CONFIG_ARCH_SDM630), y)
-CONFIG_QCACLD_FEATURE_METERING := y
-endif
-
 ifeq ($(CONFIG_ARCH_SDM845), y)
 CONFIG_QCACLD_FEATURE_METERING := y
 endif
@@ -204,19 +196,7 @@ ifeq ($(CONFIG_ARCH_SM8150), y)
 CONFIG_QCACLD_FEATURE_METERING := y
 endif
 
-ifeq ($(CONFIG_ARCH_SDM670), y)
-CONFIG_QCACLD_FEATURE_METERING := y
-endif
-
-ifeq ($(CONFIG_ARCH_SM6150), y)
-CONFIG_QCACLD_FEATURE_METERING := y
-endif
-
-ifeq ($(CONFIG_ARCH_LITO), y)
-CONFIG_QCACLD_FEATURE_METERING := y
-endif
-
-ifeq ($(CONFIG_ARCH_BENGAL), y)
+ifeq ($(CONFIG_HELIUMPLUS), y)
 CONFIG_QCACLD_FEATURE_METERING := y
 endif
 
@@ -725,30 +705,6 @@ endif
 endif
 endif
 
-ifeq ($(CONFIG_ARCH_SDMMAGPIE), y)
-ifeq ($(CONFIG_IPA_OFFLOAD), y)
-CONFIG_ENABLE_SMMU_S1_TRANSLATION := y
-endif
-endif
-
-ifeq ($(CONFIG_ARCH_LITO), y)
-ifeq ($(CONFIG_IPA_OFFLOAD), y)
-CONFIG_ENABLE_SMMU_S1_TRANSLATION := y
-endif
-endif
-
-ifeq ($(CONFIG_ARCH_ATOLL), y)
-ifeq ($(CONFIG_IPA_OFFLOAD), y)
-CONFIG_ENABLE_SMMU_S1_TRANSLATION := y
-endif
-endif
-
-ifeq ($(CONFIG_ARCH_TRINKET), y)
-ifeq ($(CONFIG_IPA_OFFLOAD), y)
-CONFIG_ENABLE_SMMU_S1_TRANSLATION := y
-endif
-endif
-
 ifeq ($(CONFIG_ARCH_SDXPRAIRIE), y)
 ifeq ($(CONFIG_IPA_OFFLOAD), y)
 CONFIG_ENABLE_SMMU_S1_TRANSLATION := y
@@ -761,13 +717,7 @@ CONFIG_ENABLE_SMMU_S1_TRANSLATION := y
 endif
 endif
 
-ifeq ($(CONFIG_ARCH_SM6150), y)
-ifeq ($(CONFIG_IPA_OFFLOAD), y)
-CONFIG_ENABLE_SMMU_S1_TRANSLATION := y
-endif
-endif
-
-ifeq ($(CONFIG_ARCH_BENGAL), y)
+ifeq ($(CONFIG_HELIUMPLUS), y)
 ifeq ($(CONFIG_IPA_OFFLOAD), y)
 CONFIG_ENABLE_SMMU_S1_TRANSLATION := y
 endif
